<resources>
    <string name="app_name">AimForAmbition</string>
    <string name="action_settings">Settings</string>
    <string name="about_settings">About</string>
    <string name="sort_settings">Sort Goals</string>
    <string name="action_delete">Delete All</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="about">About</string>
    <string name="add_goal">ADD GOAL</string>
    <string name="delete_goal">DELETE GOAL</string>
    <string name="save_goal">SAVE GOAL</string>
    <string name="change_date">CHANGE DATE</string>
    <string name="switch_deadline">CHOOSE DATE</string>
    <string name="goal_deadline">Goal deadline</string>
    <string name="enter_goal">Enter goal</string>
    <string name="enter_description">Enter description</string>
    <string name="description">Description</string>
    <string name="date">06/12/2018</string>
    <string name="priority">Low</string>
    <string name="no_goals">No goals were found</string>
    <string name="goal_priority">Change priority</string>
    <string name="choose_priority">CHOOSE PRIORITY</string>
    <string name="low">Low</string>
    <string name="label_github">Github:\u0020</string>
    <string name="label_contact">Contact info:\u0020</string>
    <string name="label_logo">Logo:\u0020</string>
    <string name="url_logo">https://www.canva.com/design/DACu0P4sl0M/U531lgmFIAxXA3niLIFOWg/edit</string>
    <string name="url_github">https://github.com/stulzm2/AimForAmbition</string>
    <string name="email">mstulz2@gmail.com</string>

</resources>
