<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.stulzm2.aimforambition.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_forever_white_36px" />
    <item
        android:id="@+id/sort_settings"
        android:orderInCategory="60"
        android:title="@string/sort_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_settings"
        android:orderInCategory="70"
        android:title="@string/about_settings"
        app:showAsAction="never" />
</menu>